moc: fix support for generating meta objects for nested private classes

Amends commit da4a6cf78ff42a4f69c2775997ff174ef647f3f3 ("moc: generate
the uint data using the new constexpr functions"), which introduced the
constexpr way of generating the meta object contents. It did fix some of
the problems the old method from Qt 4.0 had but introduced another: the
qt_call_create_metaobject() template function wasn't necessarily friends
with the scope where the QObject-derived class was defined, as in:

class Outer
{
    class Inner;
};
class Outer::Inner : public QObject
{
    Q_OBJECT
};

This commit replaces said function as well as two of the static
variables in the global namespace that moc generated (qt_meta_xxx) with
static member template variables (for Q_OBJECT and Q_GADGET). Because
they are members, they automatically have access to the
qt_create_metaobject() member template function. Like it, they are
templated on the locally-defined tag type, to prevent unnecessary
exporting.

For Q_NAMESPACE, the current solution works, because no access
protection can apply. Trying to use template variables is more trouble
than it's worth and causes warnings-turned-errors in headersclean, for
example. This commit renames them, though, so the generator.cpp code is
common.

Fixes: QTBUG-129570
Change-Id: If8918852001be347fba9fffd5407faffb2bb45c1
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>